--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
     <properties>
         <spring.version>4.3.4.RELEASE</spring.version>
+        <jackson.version>2.8.1</jackson.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -29,7 +30,7 @@
                 <version>4.12</version>
             </dependency>
 
-
+            <!--spring支持-->
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
@@ -156,7 +157,30 @@
                 <version>3.1.0</version>
                 <scope>provided</scope>
             </dependency>
+            <!--jackson支持-->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
 
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.6</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
