--- a/spring_mvc_mybatis/src/main/resources/jdbc.properties
+++ b/spring_mvc_mybatis/src/main/resources/jdbc.properties
@@ -5,6 +5,6 @@ proxool.simultaneousBuildThrottle=30
 proxool.trace=false
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://172.16.6.58:3306/test
+jdbc.url=jdbc:mysql://172.16.6.81:3306/test?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=root
